force-app/main/default/objects/Task__c/fields/Quantity_Hours__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Hours__c</fullName>
    <label>Quantity Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>