force-app/main/default/objects/Task__c/fields/Resource_Project__c.field-meta.xml
<CustomField>
    <fullName>Resource_Project__c</fullName>
    <label>Resource Project</label>
    <referenceTo>Resource_Project__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>