force-app/main/default/objects/Task__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Iniciada</fullName>
            </value>
            <value>
                <fullName>En Progreso</fullName>
            </value>
            <value>
                <fullName>Completada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>