force-app/main/default/objects/Task__c/fields/Task_summary__c.field-meta.xml
<CustomField>
    <fullName>Task_summary__c</fullName>
    <label>Task summary</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>