force-app/main/default/objects/Task__c/validationRules/Assignment_Task.validationRule-meta.xml
<ValidationRule>
    <fullName>Assignment_Task</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Id   &lt;&gt;   Resource_Project__r.Project__r.Squad_Lead__r.Id</errorConditionFormula>
    <errorMessage>You are not the Squad Lead or the resource does not belong to the project.</errorMessage>
</ValidationRule>