force-app/main/default/objects/Task__c/validationRules/can_change_Worked_hours_and_state.validationRule-meta.xml
<ValidationRule>
    <fullName>can_change_Worked_hours_and_state</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $User.Id  &lt;&gt;  Resource_Project__r.Project__r.Squad_Lead__c,
    $User.Id =  Resource_Project__r.Resource__c,
    AND(
      NOT(ISCHANGED( State__c )) ,
      NOT(ISCHANGED( Worked_Hours__c ))
    )
)</errorConditionFormula>
    <errorMessage>You can only change your worked hours or the task state</errorMessage>
</ValidationRule>