force-app/main/default/objects/Task__c/validationRules/Check_that_tasks_are_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_that_tasks_are_complete</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(Resource_Project__r.Project__r.Status__c) &lt;&gt; &quot;Completed&quot;</errorConditionFormula>
    <errorMessage>To complete the project you have to finish the tasks.</errorMessage>
</ValidationRule>