force-app/main/default/objects/Task__c/validationRules/Project_in_progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_in_progress</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Resource_Project__r.Project__r.Status__c) &lt;&gt; &quot;In Progress&quot;</errorConditionFormula>
    <errorMessage>It is not allowed to assign Tasks if the status of the project is different from &quot;In Progress&quot;</errorMessage>
</ValidationRule>