force-app/main/default/objects/Task__c/validationRules/Required_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   ISBLANK( Resource_Project__r.Resource__c ), ISBLANK( Resource_Project__r.Project__c ), ISBLANK(Start_Date__c), ISBLANK(End_Date__c),  ISBLANK(Quantity_Hours__c)  ,  ISBLANK(TEXT(State__c))  )</errorConditionFormula>
    <errorMessage>Must contain all fields.</errorMessage>
</ValidationRule>